feat: finishing time slots action

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -13,12 +13,15 @@
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
  
-    --primary: 65, 65%, 65%;
+    --primary: 65 65% 65%;
     --primary-foreground: 0 0% 100%;
  
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
- 
+
+    --tertiary: 63 66% 90%;
+    --tertiary-foreground: var(--primary);
+
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
  
